# ChangeLog for dev-perl/DateTime-Locale
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.59 2009/01/30 12:19:31 tove Exp $

  30 Jan 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
  -DateTime-Locale-0.34.ebuild, -DateTime-Locale-0.35.ebuild,
  -DateTime-Locale-0.41.ebuild:
  Cleanup

  11 Jan 2009; Markus Meier <maekke@gentoo.org> DateTime-Locale-0.42.ebuild:
  amd64 stable, bug #254143

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> DateTime-Locale-0.42.ebuild:
  Marked ppc stable for bug #254143.

  08 Jan 2009; Brent Baude <ranger@gentoo.org> DateTime-Locale-0.41.ebuild,
  DateTime-Locale-0.42.ebuild:
  Marking .41 back to ~ppc64 and .42 to ppc64 for bug 254143

  08 Jan 2009; Brent Baude <ranger@gentoo.org> DateTime-Locale-0.41.ebuild:
  Marking DateTime-Locale-0.41 ppc64 for bug 254143

  07 Jan 2009; Raúl Porcel <armin76@gentoo.org>
  DateTime-Locale-0.42.ebuild:
  alpha/ia64/x86 stable wrt #254143

  07 Jan 2009; Ferris McCormick <fmccor@gentoo.org>
  DateTime-Locale-0.42.ebuild:
  Sparc stable, part of Bug #254143.

  18 Nov 2008; Torsten Veller <tove@gentoo.org> DateTime-Locale-0.34.ebuild,
  DateTime-Locale-0.35.ebuild, DateTime-Locale-0.41.ebuild,
  DateTime-Locale-0.42.ebuild:
  New virtuals: module-build

  13 Sep 2008; Torsten Veller <tove@gentoo.org>
  -DateTime-Locale-0.22.ebuild, -DateTime-Locale-0.31.01.ebuild,
  -DateTime-Locale-0.32.ebuild, -DateTime-Locale-0.33.ebuild:
  Cleanup

*DateTime-Locale-0.42 (13 Sep 2008)

  13 Sep 2008; Torsten Veller <tove@gentoo.org>
  +DateTime-Locale-0.42.ebuild:
  Version bump

  22 Jul 2008; Markus Rothe <corsair@gentoo.org>
  DateTime-Locale-0.41.ebuild:
  Added ~ppc64; bug #232181

  18 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  DateTime-Locale-0.41.ebuild:
  Add ~alpha/~ia64 wrt #232181

  18 Jul 2008; Alexis Ballier <aballier@gentoo.org>
  DateTime-Locale-0.41.ebuild:
  keyword ~x86-fbsd, bug #232181
