@@ -1,0 +1,25 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/DateTime-Locale-0.43.ebuild,v 1.1 2009/07/01 05:12:04 tove Exp $
+
+EAPI=2
+
+inherit versionator
+MY_P=${PN}-$(delete_version_separator 2)
+S=${WORKDIR}/${MY_P}
+MODULE_AUTHOR=DROLSKY
+inherit perl-module
+
+DESCRIPTION="Localization support for DateTime"
+
+LICENSE="|| ( Artistic GPL-2 ) unicode"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~x86-macos ~x86-solaris"
+IUSE=""
+
+RDEPEND="dev-perl/Params-Validate
+	dev-perl/List-MoreUtils"
+DEPEND=">=virtual/perl-Module-Build-0.28
+	${RDEPEND}"
+
+SRC_TEST="do"
