@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DateTime-Locale
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.59 2009/01/30 12:19:31 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.60 2009/07/01 05:12:04 tove Exp $
+
+*DateTime-Locale-0.43 (01 Jul 2009)
+
+  01 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +DateTime-Locale-0.43.ebuild:
+  Version bump
 
   30 Jan 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
   -DateTime-Locale-0.34.ebuild, -DateTime-Locale-0.35.ebuild,
